# MosaicAlbum

./: .gitignore  config.status  configure  configure.ac  resetDB.sh
.dbup/: properties.ini  properties.ini.in
autom4te.cache/: output.0  traces.0
public_html/: index.php
public_html/css/: carousel-customize.css  image-picker.css  mosaicalbum.css
public_html/img/: .gitignore  folderNameRule.md
public_html/js/: facebook.js  jquery.detailclick.js  jquery.detailclick.min.js  modal_request.js
public_html/js/album_viewer/: select_album.js
public_html/js/canvastest/: draw.coffee  draw.js  threetest.coffee  threetest.js
public_html/js/facebook/: invite.js
public_html/js/mosaic/: canvastest.coffee  canvastest.js  canvastest_.js  test.coffee  test.js
public_html/js/select/: modal_image.js  modal_request.js  select.js
public_html/js/select_album/: modal.js  select_album.js
public_html/js/select_goal/: modal_album.js  modal_image.js  select_goal.js  select_image.js
public_html/shader/: test.frag  test.vert
sql/: MosaicAlbum.sql  V1__MosaicAlbum.sql  V2__MODIFY_ALBUM_IMAGE.sql
src/: bootstrap.php
src/Vg/Model/: Album.php  AlbumImage.php  AlbumUser.php  FBHelper.php  GoalImage.php  Image.php  MosaicPiece.php  UsedImage.php
src/Vg/Validator/: ImageUpdater.php  (+6 more)
src/app/: album_viewer.php  select.php  select_album.php  select_goal.php  top.php  user.php
src/mosaic/: .CreateMosaic.php.swp  .exec.sh.swp  .mosaic.php.swp  CreateMosaic.php  Image.php  exec.sh  gd_bmp_util.php  mosaic.php
src/views/: .layout.html.twig.swp  error.html.twig  layout.html.twig
(+56 files in other folders)
